--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 							<div class="about-course__box">
 								<div class="about-course__inner-2">
 									<div class="about-course__time">
-										<img src="/svg/time.svg" alt="time">
+										<img src="./svg/time.svg" alt="time">
 										<p class="rating__text">
 											8 недель
 										</p>
